--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
     <!-- First row with 12 columns -->
     <div class="row image-container">
       <div class="col-sm-1">
-        <img src="https://via.placeholder.com/150" alt="Movie Image">
+        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
       </div>
       <!-- Repeat this div for the other 11 images -->
       <!-- Example: -->
@@ -36,7 +36,7 @@
     <!-- Second row with 6 columns -->
     <div class="row image-container">
       <div class="col-sm-2">
-        <img src="https://via.placeholder.com/150" alt="Movie Image">
+        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
       </div>
       <!-- Repeat this div for the other 5 images -->
     </div>
@@ -44,7 +44,7 @@
     <!-- Third row with 3 columns -->
     <div class="row image-container">
       <div class="col-sm-4">
-        <img src="https://via.placeholder.com/150" alt="Movie Image">
+        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
       </div>
       <!-- Repeat this div for the other 2 images -->
     </div>
@@ -52,7 +52,7 @@
     <!-- Fourth row with 1 column -->
     <div class="row image-container">
       <div class="col-sm-12">
-        <img src="https://via.placeholder.com/150" alt="Movie Image">
+        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
       </div>
     </div>
 
