--- a/main.html
+++ b/main.html
@@ -4,61 +4,41 @@
 
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .image-container {
-      margin-bottom: 20px;
-    }
-
-    img {
-      width: 100%;
-      height: 100px;
-      object-fit: cover;
-    }
-  </style>
+   
 </head>
 <body>
 
-  <!-- Bootstrap container -->
-  <div class="container-fluid">
-
-    <!-- First row with 12 columns -->
-    <div class="row image-container">
-      <div class="col-sm-1">
-        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
-      </div>
-      <!-- Repeat this div for the other 11 images -->
-      <!-- Example: -->
-      <!-- <div class="col-sm-1">
-        <img src="https://via.placeholder.com/150" alt="Movie Image">
-      </div> -->
-    </div>
-
-    <!-- Second row with 6 columns -->
-    <div class="row image-container">
-      <div class="col-sm-2">
-        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
-      </div>
-      <!-- Repeat this div for the other 5 images -->
-    </div>
-
-    <!-- Third row with 3 columns -->
-    <div class="row image-container">
-      <div class="col-sm-4">
-        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
-      </div>
-      <!-- Repeat this div for the other 2 images -->
-    </div>
-
-    <!-- Fourth row with 1 column -->
-    <div class="row image-container">
-      <div class="col-sm-12">
-        <img src="https://via.placeholder.com/150" alt="Movie Image" height="100px" width="100px">
+     <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12 d-flex justify-content-center align-items-center">
+        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-sm-2 d-flex justify-content-center align-items-center">
+        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
+      </div>
+      <div class="col-sm-10 d-flex justify-content-center align-items-center">
+        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6 d-flex justify-content-center align-items-center">
+        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
+      </div>
+      <div class="col-sm-6 d-flex justify-content-center align-items-center">
+        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 d-flex justify-content-center align-items-center">
+        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
+      </div>
+    </div>
   </div>
-
-<body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
