--- a/main.html
+++ b/main.html
@@ -4,41 +4,38 @@
 
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		 img {
+          max-width: 100%;
+           height: 100px;
+}
+	</style>
    
 </head>
 <body>
 
      <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-12 d-flex justify-content-center align-items-center">
+      <div class="col-sm-12">
         <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-sm-2 d-flex justify-content-center align-items-center">
-        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
-      </div>
-      <div class="col-sm-10 d-flex justify-content-center align-items-center">
+      <div class="col-sm-6">
         <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-sm-6 d-flex justify-content-center align-items-center">
+      <div class="col-sm-3">
         <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
       </div>
-      <div class="col-sm-6 d-flex justify-content-center align-items-center">
-        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-12 d-flex justify-content-center align-items-center">
+      <div class="col-sm-1">
         <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
       </div>
     </div>
-  </div>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
