--- a/main.html
+++ b/main.html
@@ -26,6 +26,7 @@
       <div class="col-sm-3">
         <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
       </div>
+       <div class="row">
       <div class="col-sm-1">
         <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
       </div>
