--- a/main.html
+++ b/main.html
@@ -8,31 +8,46 @@
    
 </head>
 <body>
-
-     <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12">
-        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6">
-        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-3">
-        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
-      </div>
-       <div class="row">
-      <div class="col-sm-1">
-        <img src="https://images.unsplash.com/photo-1699771808058-ee8aa12b1399?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" height="100px" width="100px">
-      </div>
-    </div>
-    </div>
 	<!-- the entire body must be written by student -->
+	 <div class="container-fluid">
+
+    <!-- First Row: 12 images -->
+    <div class="row">
+      <!-- 12 columns with col-sm-1 class -->
+      <div class="col-sm-1">
+        <img src="https://via.placeholder.com/100" alt="Movie Image 1" class="img-fluid">
+      </div>
+      <!-- Repeat the above div for the next 11 images -->
+    </div>
+
+    <!-- Second Row: 6 images -->
+    <div class="row">
+      <!-- 6 columns with col-sm-2 class -->
+      <div class="col-sm-2">
+        <img src="https://via.placeholder.com/100" alt="Movie Image 13" class="img-fluid">
+      </div>
+      <!-- Repeat the above div for the next 5 images -->
+    </div>
+
+    <!-- Third Row: 3 images -->
+    <div class="row">
+      <!-- 3 columns with col-sm-4 class -->
+      <div class="col-sm-4">
+        <img src="https://via.placeholder.com/100" alt="Movie Image 19" class="img-fluid">
+      </div>
+      <!-- Repeat the above div for the next 2 images -->
+    </div>
+
+    <!-- Fourth Row: 1 image -->
+    <div class="row">
+      <!-- 1 column with col-sm-12 class -->
+      <div class="col-sm-12">
+        <img src="https://via.placeholder.com/100" alt="Movie Image 22" class="img-fluid">
+      </div>
+    </div>
+
+  </div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
