--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <div class="row">
       <!-- 12 columns with col-sm-1 class -->
       <div class="col-sm-1">
-        <img src="https://via.placeholder.com/100" alt="Movie Image 1" class="img-fluid">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 1" class="img-fluid">
       </div>
       <!-- Repeat the above div for the next 11 images -->
     </div>
@@ -24,7 +24,7 @@
     <div class="row">
       <!-- 6 columns with col-sm-2 class -->
       <div class="col-sm-2">
-        <img src="https://via.placeholder.com/100" alt="Movie Image 13" class="img-fluid">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 13" class="img-fluid">
       </div>
       <!-- Repeat the above div for the next 5 images -->
     </div>
@@ -33,7 +33,7 @@
     <div class="row">
       <!-- 3 columns with col-sm-4 class -->
       <div class="col-sm-4">
-        <img src="https://via.placeholder.com/100" alt="Movie Image 19" class="img-fluid">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 19" class="img-fluid">
       </div>
       <!-- Repeat the above div for the next 2 images -->
     </div>
@@ -42,7 +42,7 @@
     <div class="row">
       <!-- 1 column with col-sm-12 class -->
       <div class="col-sm-12">
-        <img src="https://via.placeholder.com/100" alt="Movie Image 22" class="img-fluid">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 22" class="img-fluid">
       </div>
     </div>
 
