--- a/main.html
+++ b/main.html
@@ -8,45 +8,32 @@
    
 </head>
 <body>
-	<!-- the entire body must be written by student -->
-	 <div class="container-fluid">
-
-    <!-- First Row: 12 images -->
+	<div class="container-fluid">
     <div class="row">
-      <!-- 12 columns with col-sm-1 class -->
-      <div class="col-sm-1">
-        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 1" class="img-fluid">
+      <div class="col-sm-1 d-flex justify-content-center align-items-center">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie image">
       </div>
-      <!-- Repeat the above div for the next 11 images -->
-    </div>
+      ... </div>
 
-    <!-- Second Row: 6 images -->
     <div class="row">
-      <!-- 6 columns with col-sm-2 class -->
-      <div class="col-sm-2">
-        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 13" class="img-fluid">
+      <div class="col-sm-2 d-flex justify-content-center align-items-center">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie image">
       </div>
-      <!-- Repeat the above div for the next 5 images -->
-    </div>
+      ... </div>
 
-    <!-- Third Row: 3 images -->
     <div class="row">
-      <!-- 3 columns with col-sm-4 class -->
-      <div class="col-sm-4">
-        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 19" class="img-fluid">
+      <div class="col-sm-4 d-flex justify-content-center align-items-center">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie image">
       </div>
-      <!-- Repeat the above div for the next 2 images -->
-    </div>
+      ... </div>
 
-    <!-- Fourth Row: 1 image -->
     <div class="row">
-      <!-- 1 column with col-sm-12 class -->
-      <div class="col-sm-12">
-        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie Image 22" class="img-fluid">
+      <div class="col-sm-12 d-flex justify-content-center align-items-center">
+        <img src="https://plus.unsplash.com/premium_photo-1683141316518-70595b251f01?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Movie image">
       </div>
     </div>
-
   </div>
+     
 
     <script type="text/javascript" src="./script.js">
 </script>
